--- a/manifest.json
+++ b/manifest.json
@@ -4,19 +4,20 @@
 	"version": "1.0",
 	"description": "a simple info of stock",
 	"icons": {
-        "16": "images/icon16.png",
-        "48": "images/icon48.png",
-        "128": "images/icon128.png"
+        "16": "images/headshot16.png",
+        "48": "images/headshot48.png",
+        "128": "images/headshot128.png"
     },
 	"browser_action": {
 		"default_icon": {
-            "19": "images/icon19.png",
-            "38": "images/icon38.png"
+            "19": "images/headshot19.png",
+            "38": "images/headshot38.png"
         },
-		"default_title": "stock helper",
+		"default_title": "Jenkins helper",
 		"default_popup": "popup.html"
 	},
 	"permissions": [
-        "http://hq.sinajs.cn/list=*"
+		"http://jci.beisencorp.com/*",
+		"tabs"
     ]
 }
